# webrca-summarizer

./: .gitignore  Incident Report.py  README.md  gen-incident-reports.py  gen-incident-reports.sh  gen-sumaries.py  main.py  prompt  pyproject.toml  reports.py  settings.py  summaries.py  ❗Incident Report.py
prompts/: editor  summarization
