[project]
name = "webrca-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.66.3",
    "pydantic-ai>=0.0.41",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.0",
]
