[project]
name = "webrca-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.75.0",
    "pydantic-ai>=0.1.3",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.0",
    "watchdog>=6.0.0",
]
